@@ -5,7 +5,7 @@ use Test::More;
 
 eval "use YAML";
 plan skip_all => "YAML" if $@;
-plan tests => 6;
+plan tests => 8;
 
 use_ok 'Spreadsheet::HTML';
 
@@ -21,6 +21,16 @@ is $table->generate,
 is Spreadsheet::HTML::generate( %file ),
     '<table><tr><th>header1</th><th>header2</th><th>header3</th></tr><tr><td>foo</td><td>bar</td><td>baz</td></tr><tr><td>one</td><td>two</td><td>three</td></tr><tr><td>1</td><td>2</td><td>3</td></tr></table>',
     "loaded simple YAML data via procedure"
+;
+
+is $table->generate( data => 1 ),
+    '<table><tr><th>header1</th><th>header2</th><th>header3</th></tr><tr><td>foo</td><td>bar</td><td>baz</td></tr><tr><td>one</td><td>two</td><td>three</td></tr><tr><td>1</td><td>2</td><td>3</td></tr></table>',
+    "data param does not clobber loaded simple YAML data via method"
+;
+
+is Spreadsheet::HTML::generate( %file, data => 1 ),
+    '<table><tr><th>header1</th><th>header2</th><th>header3</th></tr><tr><td>foo</td><td>bar</td><td>baz</td></tr><tr><td>one</td><td>two</td><td>three</td></tr><tr><td>1</td><td>2</td><td>3</td></tr></table>',
+    "data param does not clobber loaded simple YAML data via procedure"
 ;
 
 $table = Spreadsheet::HTML->new( %file );
