@@ -11,7 +11,7 @@ eval "use Text::CSV_XS";
 eval "use Text::CSV_PP";
 plan skip_all => "Text::CSV, Text::CSV_XS or Text::CSV_PP required" if $@;
 
-plan tests => 11;
+plan tests => 13;
 use_ok 'Spreadsheet::HTML';
 
 my %file  = ( file => 't/data/simple.csv' );
@@ -25,6 +25,16 @@ is $table->generate,
 is Spreadsheet::HTML::generate( %file ),
     '<table><tr><th>header1</th><th>header2</th><th>header3</th></tr><tr><td>foo</td><td>bar</td><td>baz</td></tr><tr><td>one</td><td>two</td><td>three</td></tr><tr><td>1</td><td>2</td><td>3</td></tr></table>',
     "loaded simple CSV data via procedure"
+;
+
+is $table->generate( data => 1 ),
+    '<table><tr><th>header1</th><th>header2</th><th>header3</th></tr><tr><td>foo</td><td>bar</td><td>baz</td></tr><tr><td>one</td><td>two</td><td>three</td></tr><tr><td>1</td><td>2</td><td>3</td></tr></table>',
+    "data param does not clobber loaded simple CSV data"
+;
+
+is Spreadsheet::HTML::generate( %file, data => 1 ),
+    '<table><tr><th>header1</th><th>header2</th><th>header3</th></tr><tr><td>foo</td><td>bar</td><td>baz</td></tr><tr><td>one</td><td>two</td><td>three</td></tr><tr><td>1</td><td>2</td><td>3</td></tr></table>',
+    "data param does not clobber loaded simple CSV data via procedure"
 ;
 
 $table = Spreadsheet::HTML->new( %file );
